Fix some alignment issues

--- a/src/components/material/popup-menu.styl
+++ b/src/components/material/popup-menu.styl
@@ -2,9 +2,12 @@
   position: relative
 
   .popup-menu-button
+    padding 0
     background-color transparent
     border-color transparent
     box-shadow none
+    height 20px
+    width 20px
     i
       color black
       &:before
@@ -21,6 +24,7 @@
     top 30px
     transform translateX(-60%)
     box-shadow 0px 2px 10px 0px rgba(0,0,0,0.16), 0px 2px 5px 0px rgba(0,0,0,0.15)
+    z-index 10
 
     .popup-menu-item
       width 100%
